# ros2_iio_medical

./: CMakeLists.txt
.github/workflows/: ci.yml
docs/: REALTIME.md
include/ros2_iio_medical/: iio_channel.hpp  iio_triggered_buffer.hpp
src/: iio_triggered_buffer.cpp
test/: test_channel_parser.cpp
